--- a/templates/index.html
+++ b/templates/index.html
@@ -132,8 +132,16 @@ document.getElementById("sidebar").style.width = "0";
                    >
             <a href ="#Home" >Home</a>
           <i ></i></li>
-          <li>
-          <a href="#about">Our Practices</a></li>
+          <li
+
+          {% if '/practices/' == request.path %}
+              class= "nav-item active"
+          {% else %}
+             class= "nav-item "
+          {% endif %}
+
+          >
+          <a href="{%url 'practices' %}">Our Practices</a></li>
           <li
           {% if '/services/' == request.path %}
               class= "nav-item active"
