--- a/templates/services.html
+++ b/templates/services.html
@@ -248,7 +248,7 @@ function likebutton() {
                                          <a href="#menu1sub{{items.id}}"  data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
                                                    <div class="collapse" id="menu1sub{{items.id}}" style="margin-left:33px">
                                                         {%  for item_new in items.category.all %}
-                                                                 <a href="{%url 'model'%}?model={{ item_new.name }}" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
+                                                                 <a href="{%url 'model'%}?model={{ item_new.name }}&cat={{items.name}}&home={{item.id}}" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
                                                         {%endfor%}
                                                <!-- <div class="collapse"> -->
                                          </div>
@@ -266,7 +266,7 @@ function likebutton() {
 
       <div class="intro-info">
       <h1 class="caption">{{modulename}}</h1>
-      <h3 class="tagline">Fortifying your business with blockchain solutions</h3>
+      <h3 class="tagline"></h3>
 
       </div>
    </div>
