--- a/virtusa/static/css/practices04.css
+++ b/virtusa/static/css/practices04.css
@@ -193,7 +193,7 @@ h6 {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: rgb(0,0,0,0.70);
+  background-color: #006AA5;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -203,9 +203,12 @@ h6 {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fff;
   display: block;
   transition: 0.3s;
+  font-size: 22px;
+line-height: 20px;
+font-weight: 700;
 }
 
 .sidebar a:hover {
@@ -275,6 +278,7 @@ font-weight: 700;
 color: #000;
 margin-top: 0;
 margin-bottom: 25px;
+  font-family: 'Publico Headline Web';
 }
 
 #intro .intro-info h2 {
