--- a/virtusa/static/css/risk_quantification21.css
+++ b/virtusa/static/css/risk_quantification21.css
@@ -87,6 +87,9 @@ body, button, input, select, optgroup, textarea {
   margin-top: 60px;
 }
 
+
+
+
 #intro iframe{
 left:0;
 top:0;
@@ -98,25 +101,28 @@ position:absolute;
     SIDEBAR STYLE
 ----------------------------------------------------- */
 .sidebar {
-  height: 100%;
+	height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: rgb(0,0,0,0.70);
+  background-color: #006AA5;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
 }
 
 .sidebar a {
-  padding: 8px 8px 8px 32px;
+	padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fff;
   display: block;
   transition: 0.3s;
+	font-size: 22px;
+line-height: 20px;
+font-weight: 700;
 }
 
 .sidebar a:hover {
@@ -165,7 +171,14 @@ position:absolute;
   position: relative;
   background: url("../images/intro-bg.jpg") center bottom no-repeat;
   background-size: cover;
-  padding: 200px 0 120px 0;
+   padding: 121px 10px 120px 0;
+
+	height:500px;
+}
+
+#intro .intro-info {
+
+    text-align: center;
 }
 
 #intro .intro-info .title {
@@ -175,6 +188,106 @@ position:absolute;
     margin-top: 0;
     margin-bottom: 25px;
     text-align: center;
+
+}
+/* #intro .intro-info .slide {
+    font-size: 17px;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 25px;
+    text-align: center;
+		animation: blinkingText 5s infinite;
+} */
+
+@keyframes blinkingText{
+	0%{		color: red;	}
+	49%{	color: transparent;	}
+	50%{	color: transparent;	}
+	99%{	color:transparent;	}
+	100%{	color: red;	}
+}
+
+/* $stem-width: 6px;
+$pointer-width: 6px;
+$pointer-space: 20px;
+
+#intro .intro-info .arrow {
+  width: 6px;
+  height: 80px;
+  margin: 5% auto;
+  border-radius: 3px;
+  background-color: white;
+  background: linear-gradient(to bottom, rgba(255,255,255,0), white 75%);
+  -webkit-animation: 3s soft-blink infinite alternate;
+  animation: 3s soft-blink infinite alternate;
+  position: relative;
+  opacity: 0;
+}
+
+@-webkit-keyframes soft-blink {
+  0% { opacity: 0; }
+  50% { opacity: 0; }
+  100% { opacity: 0.8; }
+}
+
+@keyframes soft-blink {
+  0% { opacity: 0; }
+  50% { opacity: 0; }
+  100% { opacity: 0.8; }
+}
+
+#intro .intro-info .arrow:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: - (20 + 6) / 2;
+  border-bottom: 6px solid white;
+  border-right: 6px solid white;
+  border-top: 6px solid transparent;
+  border-left:6px solid transparent;
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+} */
+
+#intro .intro-info .btn-get-started,
+#intro .intro-info .btn-services {
+  background: #00FEFF;
+    display: inline-block;
+    border-radius: 50px;
+    padding: 11px 48px 10px 48px;
+    color: #000;
+    font-size: 15px;
+    font-weight: 600;
+    border: 1px solid #77dede;
+    font-family: 'Barlow', Arial;
+			/* animation: blinkingText 5s infinite; */
+/*  color: #fff;    */
+}
+
+
+#intro .intro-info .btn-get-started:hover {
+  background: #fff;
+ /* border-color: #fff;   */
+  color: #000;
+  list-style: none;
+  text-decoration: none;;
+
+}
+
+#intro .intro-info .btn-services {
+  border: 1px solid;
+   border-color: #000;
+    color:#000;
+}
+
+#intro .intro-info .btn-services:hover {
+  background: #000;
+  color: #fff;
+
 }
 
 .border{
@@ -558,14 +671,11 @@ img.left {
 section#intro{
   width: 100%;
       position: relative;
-      /* background: url(../images/intro-bg.jpg) center bottom no-repeat; */
+
       background:rgba(0,106, 165, 0.8);
 
       background-size: cover;
-      padding: 200px 0 120px 0;
-	/* border-bottom:1px solid #e9e9e9; */
-	/* padding-top:60px; */
-	/* margin-bottom:40px; */
+
 }
 section#servicesNew {
   /* max-width: 100%;
