--- a/virtusa/static/css/service_updated22.css
+++ b/virtusa/static/css/service_updated22.css
@@ -1,9 +1,9 @@
-body, button, input, select, optgroup, textarea {
+/* body, button, input, select, optgroup, textarea {
 	color: #333;
 	font-family: 'Synthesis', sans-serif !important;
 	font-size: 15px !important;
 	line-height: 1.2 !important;
-}
+} */
 
 .main-container {
  min-height: 100vh; /* will cover the 100% of viewport */
@@ -200,25 +200,28 @@ svg path {fill: #000 !important;}
     SIDEBAR STYLE
 ----------------------------------------------------- */
 .sidebar {
-  height: 100%;
+	height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: rgb(0,0,0,0.70);
+  background-color: #006AA5;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
 }
 
 .sidebar a {
-  padding: 8px 8px 8px 32px;
+	padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fff;
   display: block;
   transition: 0.3s;
+	font-size: 22px;
+line-height: 20px;
+font-weight: 700;
 }
 
 .sidebar a:hover {
@@ -283,7 +286,7 @@ background: rgba(0,254, 255, 0.8);
 }
 
 #intro .caption {
-    font-size: 50px;
+    font-size: 68px;
     font-weight: 700;
     color: #000;
     text-align: center;
@@ -365,15 +368,18 @@ background: rgba(0,254, 255, 0.8);
 --------------------------------------------------------------*/
 .nav-tab > li > a {
 
-    padding: 10px 58px;
+    padding: 10px;
     display: block;
     font-size: 16px;
     font-family: 'Synthesis', sans-serif !important;
     font-weight: 700;
     color: #006AA5;
     border: 1px solid #ccc;
-    padding: 10px 58px;
+    padding: 10px;
     display: block;
+		text-align: center;
+		height: 75px;
+
   }
 
 	.nav-tab .nav-link.active,
@@ -742,7 +748,7 @@ a.morelink {
 
 .tab-pane .story-link:hover {
 	text-decoration: none;
-	background:rgba(0, 170, 232, 0.75); 
+	background:rgba(0, 170, 232, 0.75);
 }
 
 .tab-pane .story-link .overlay:hover {
