--- a/virtusa/static/css/style_updated18.css
+++ b/virtusa/static/css/style_updated18.css
@@ -1,9 +1,9 @@
-body, button, input, select, optgroup, textarea {
+/* body, button, input, select, optgroup, textarea {
 	color: #333;
 	font-family: 'Synthesis', sans-serif !important;
 	font-size: 15px !important;
 	line-height: 1.2 !important;
-}
+} */
 /* h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	letter-spacing:0.5px;
@@ -185,7 +185,7 @@ h6 {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: rgb(0,0,0,0.70);
+  background-color: #006AA5;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -195,10 +195,15 @@ h6 {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #818181;
+  color: #fff;
   display: block;
   transition: 0.3s;
+	font-size: 22px;
+line-height: 20px;
+font-weight: 700;
 }
+
+
 
 .sidebar a:hover {
   color: #f1f1f1;
@@ -267,6 +272,7 @@ font-weight: 700;
 color: #fff;
 margin-top: 0;
 margin-bottom: 25px;
+    font-family: 'Publico Headline Web';
 }
 
 #intro .intro-info h2 {
@@ -574,7 +580,7 @@ margin-bottom: 25px;
       margin: 20px auto;
       font-size: 40px;
       text-align: center;
-      font-family: 'Publico Headline Web', sans-serif;
+      font-family: 'Publico Headline Web';
   }
 #about p {
   font-size: 17px;
