--- a/templates/indview.html
+++ b/templates/indview.html
@@ -41,6 +41,9 @@
   <link href="{% static 'lib/ionicons/css/ionicons.min.css' %}" rel="stylesheet">
   <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
   <link href="{% static 'lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
@@ -573,113 +576,181 @@
  </div>
 
 
-    <section id="servicesNew" >
-        <div class="container">
-          <header class="section-header">
-            <p>{{model.summary}}</p>
-               <div class="title">Explore the capabilities of the Open Innovation Platform</div>
-            <!-- <p>xLabs: The digital innovation hub within Virtusa.</p> -->
-          </header>
+<!--//
+New code-->
+<div class="maincontent">
+<div class="row">
+<div class="col-md-12 board">
+    <!-- <h2>Welcome to IGHALO!<sup>™</sup></h2>-->
+    <div class="board-inner">
+        <ul class="nav nav-tabs" id="myTab">
+            <div class="liner"></div>
+            <li class="active">
+                <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
+                    <span class="round-tabs one">
+                        <i class="icon icon-profile-male"></i>01
+                                 <h4>Problem</h4>            </span>
 
-        <div class="row">
-          <div class="wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-            <div class="cta-box">
-               <div class="cta form-group">
-                  <h3>Input </h3>
-
-              <div class=" span5" data-wow-duration="1.4s">
-                <div id="table-scroll">
-                    <table class="table table-fixed table-dark" id ="table_data">
-                       <thead>
-                                <th>Name</th>
-                                <th>Value</th>
-                                <!-- <th>Options</th> -->
-                         </thead>
-                         <tbody>
-                              {% for i in model.inputs_csv %}
-                                     <tr>
-                                        <td>{{i.0}}</td>
-                                        <td>{{ i.1 }}</td>
-                                            <!-- <td>
-                                            <button class="editbtn">Edit</button>
-                                             <button class="btn_cancel">Cancel</button>
-                                            <button class="btn_save">Save</button>
-                                            </td> -->
-                                    </tr>
-                               {% endfor %}
-                             </tbody>
-                             </table>
-                          </div>
-                      </div>
-
-               </div>
-           </div>
-         </div>
-         <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-           <!-- <h5>Result </h5>  <strong><h3 id='result' style='color:black;'></h3></strong> -->
-
-
-
-              <div class="cta-box">
-                 <div class="cta form-group">
-
-
-
-                        <h3>Output </h3>
-
-
-
-                      <div class=" span5" data-wow-duration="1.4s">
-                       <div id="table-scroll">
-                         <table id="cupFinals" border=1 px class="fixed">
-                                   <tbody id="matchData"></tbody>
-                            </table>
-
-
-                      </div>
-                </div>
-                 </div>
-                 </div>
-                </div>
-
-                <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-                  <div class="cta-box">
-
-                 <button type="button" class="btn btn-primary" id ="cbtn"> Edit </button>
-                 <button type="button" class="btn btn-primary" id ="dbtn">Save</button>
-             </div>
-             </div>
-
-             <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-               <div class="cta-box">
-              <input type ="submit" class="btn btn-success  btn-md" id ="Submit" class="form-control">
-
-          </div>
-          </div>
-
-
-
-         </div>
-
-
-
-
-
-  <div class="row">
-    <div class="span12">
-      <div class="blank10"></div>
+                </a>
+            </li>
+            <li>
+              <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+                    <span class="round-tabs two">
+                        <i class="icon icon-pencil"></i>02
+                  <h4>Approach</h4>     </span>
+                </a>
+            </li>
+            <li>
+                <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
+                    <span class="round-tabs three">
+                        <i class="icon icon-layers"></i>03
+                        <h4>Solution</h4>
+                    </span>
+                </a>
+            </li>
+ </ul>
     </div>
-  </div>
+
+<div class="tab-content">
+    <div class="tab-pane active" role="tabpanel" id="step1">
+
+       <div class="step1">
+      <div class="card mb-3 h-85 ">
+        <div class="card-block box">
+            
+               <!-- <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #ff689b;"></i></div> -->
+           <div class="contain">
+               <h2 class="title">gdfdfg</h2>
+               <p class="card-text description comment more">fdgfg</p>
+
+               <span class="morelink read-more-small">Read More</span>
+
+</div>
+</div>
+
+           </div>
+
+
+
+           <!-- <div class="card-footer">
+             <small class="text-muted">
+                Updated on <cite title="Source Title">{{item.time}}</cite>
+             </small>
+
+          </div> -->
+       </div>
+                 </div>
+
+
+                 <div class="tab-pane" role="tabpanel" id="step2">
+                   <div class="step2">
 
 
 
 
-        <!-- <div class="col-xs-4"   style= " margin-bottom: 12px;">
-            <input type ="submit" class="btn btn-success  btn-md" id ="Submit" class="form-control">
-                    <input type ="edit" class="btn btn-success btn-md editbtn" id ="edit" class="form-control">
-        </div> -->
-     </div>
-</section>
+                       <div class="row">
+                         <div class="wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+                           <div class="cta-box">
+                              <div class="cta form-group">
+                                 <h3>Input </h3>
+
+                             <div class=" span5" data-wow-duration="1.4s">
+                               <div id="table-scroll">
+                                   <table class="table table-fixed table-dark" id ="table_data">
+                                      <thead>
+                                               <th>Name</th>
+                                               <th>Value</th>
+                                               <!-- <th>Options</th> -->
+                                        </thead>
+                                        <tbody>
+                                             {% for i in model.inputs_csv %}
+                                                    <tr>
+                                                       <td>{{i.0}}</td>
+                                                       <td>{{ i.1 }}</td>
+                                                           <!-- <td>
+                                                           <button class="editbtn">Edit</button>
+                                                            <button class="btn_cancel">Cancel</button>
+                                                           <button class="btn_save">Save</button>
+                                                           </td> -->
+                                                   </tr>
+                                              {% endfor %}
+                                            </tbody>
+                                            </table>
+                                         </div>
+                                     </div>
+
+                              </div>
+                          </div>
+                        </div>
+                        <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+                          <!-- <h5>Result </h5>  <strong><h3 id='result' style='color:black;'></h3></strong> -->
+
+
+
+                             <div class="cta-box">
+                                <div class="cta form-group">
+
+
+
+                                       <h3>Output </h3>
+
+
+
+                                     <div class=" span5" data-wow-duration="1.4s">
+                                      <div id="table-scroll">
+                                        <table id="cupFinals" border=1 px class="fixed">
+                                                  <tbody id="matchData"></tbody>
+                                           </table>
+
+
+                                     </div>
+                               </div>
+                                </div>
+                                </div>
+                               </div>
+
+                               <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+                                 <div class="cta-box">
+
+                                <button type="button" class="btn btn-primary" id ="cbtn"> Edit </button>
+                                <button type="button" class="btn btn-primary" id ="dbtn">Save</button>
+                            </div>
+                            </div>
+
+                            <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+                              <div class="cta-box">
+                             <input type ="submit" class="btn btn-success  btn-md" id ="Submit" class="form-control">
+
+                         </div>
+                         </div>
+
+
+
+                        </div>
+</div>
+</div>
+
+                                       <div class="tab-pane" role="tabpanel" id="step3">
+                                                       <div class="step33">
+
+                                                       <ul class="list-inline pull-right">
+                                                           <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
+                                                           <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
+                                                       </ul>
+                                                   </div>
+
+
+                                    </div>
+                                 </div>
+
+
+</div>
+</div>
+</div>
+
+<!--//-->
+
+
 
      <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 <!--==========================
