--- a/templates/indview.html
+++ b/templates/indview.html
@@ -29,7 +29,7 @@
 
   <!-- Bootstrap CSS File -->
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/pptxjs.css' %}"> -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification21.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification23.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -576,177 +576,116 @@
  </div>
 
 
+
+
+
+
+
+
+
 <!--//
 New code-->
-<div class="maincontent">
-<div class="row">
-<div class="col-md-12 board">
-    <!-- <h2>Welcome to IGHALO!<sup>™</sup></h2>-->
-    <div class="board-inner">
-        <ul class="nav nav-tabs" id="myTab">
-            <div class="liner"></div>
-            <li class="active">
-                <a href="#step1" data-toggle="tab" aria-controls="step1" role="tab" title="Step 1">
-                    <span class="round-tabs one">
-                        <i class="icon icon-profile-male"></i>01
-                                 <h4>Problem</h4>            </span>
 
-                </a>
-            </li>
-            <li>
-              <a href="#step2" data-toggle="tab" aria-controls="step2" role="tab" title="Step 2">
+<section style="background:#f2f2f2;">
+        <div class="container">
+            <div class="row">
+
+               <h2 class="stages">We work with clients to accelerate and optimize their tech-enabled innovation programs, focusing on three stages:</h2>
+                <div class="board">
+                    <!-- <h2>Welcome to IGHALO!<sup>™</sup></h2>-->
+                    <div class="board-inner">
+                    <ul class="nav nav-tabs" id="myTab">
+                    <div class="liner"></div>
+                     <li class="active">
+                     <a href="#home" data-toggle="tab" title="welcome">
+                       <span class="round-tabs one">
+                           <i class="icon icon-profile-male"></i>01
+                                    <h4>Problem</h4>            </span>
+                  </a>
+
+                </li>
+
+                  <li><a href="#profile" data-toggle="tab" title="profile">
                     <span class="round-tabs two">
                         <i class="icon icon-pencil"></i>02
                   <h4>Approach</h4>     </span>
-                </a>
-            </li>
-            <li>
-                <a href="#step3" data-toggle="tab" aria-controls="step3" role="tab" title="Step 3">
-                    <span class="round-tabs three">
-                        <i class="icon icon-layers"></i>03
-                        <h4>Solution</h4>
-                    </span>
-                </a>
-            </li>
- </ul>
-    </div>
+           </a>
+                 </li>
+                 <li><a href="#messages" data-toggle="tab" title="bootsnipp goodies">
+                   <span class="round-tabs three">
+                       <i class="icon icon-layers"></i>03
+                       <h4>Solution</h4>
+                   </span> </a>
+                     </li>
 
-<div class="tab-content">
-    <div class="tab-pane active" role="tabpanel" id="step1">
 
-       <div class="step1">
-      <div class="card mb-3 h-85 ">
-        <div class="card-block box">
-            
-               <!-- <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #ff689b;"></i></div> -->
-           <div class="contain">
-               <h2 class="title">gdfdfg</h2>
-               <p class="card-text description comment more">fdgfg</p>
+                     </ul></div>
 
-               <span class="morelink read-more-small">Read More</span>
+                     <div class="tab-content">
+                      <div class="tab-pane fade in active" id="home">
+
+                        <div class="card mb-3 h-85 ">
+      <div class="card-block box">
+ <h2 class="title">Problem Statement</h2>
+             <!-- <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #ff689b;"></i></div> -->
+         <div class="contain">
+
+             <p class="card-text description comment more">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+             <span class="morelink read-more-small">Read More</span>
 
 </div>
 </div>
 
-           </div>
+         </div>
+                      </div>
+                      <div class="tab-pane fade" id="profile">
+                          <h3 class="head text-center">Create a Bootsnipp<sup>™</sup> Profile</h3>
+                          <p class="narrow text-center">
+                              Lorem ipsum dolor sit amet, his ea mollis fabellas principes. Quo mazim facilis tincidunt ut, utinam saperet facilisi an vim.
+                          </p>
 
+                          <p class="text-center">
+                    <a href="" class="btn btn-success btn-outline-rounded green"> create your profile <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+                </p>
 
+                      </div>
+                      <div class="tab-pane fade" id="messages">
+                          <h3 class="head text-center">Bootsnipp goodies</h3>
+                          <p class="narrow text-center">
+                              Lorem ipsum dolor sit amet, his ea mollis fabellas principes. Quo mazim facilis tincidunt ut, utinam saperet facilisi an vim.
+                          </p>
 
-           <!-- <div class="card-footer">
-             <small class="text-muted">
-                Updated on <cite title="Source Title">{{item.time}}</cite>
-             </small>
+                          <p class="text-center">
+                    <a href="" class="btn btn-success btn-outline-rounded green"> start using bootsnipp <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+                </p>
+                      </div>
+                      <div class="tab-pane fade" id="settings">
+                          <h3 class="head text-center">Drop comments!</h3>
+                          <p class="narrow text-center">
+                              Lorem ipsum dolor sit amet, his ea mollis fabellas principes. Quo mazim facilis tincidunt ut, utinam saperet facilisi an vim.
+                          </p>
 
-          </div> -->
-       </div>
-                 </div>
-
-
-                 <div class="tab-pane" role="tabpanel" id="step2">
-                   <div class="step2">
-
-
-
-
-                       <div class="row">
-                         <div class="wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-                           <div class="cta-box">
-                              <div class="cta form-group">
-                                 <h3>Input </h3>
-
-                             <div class=" span5" data-wow-duration="1.4s">
-                               <div id="table-scroll">
-                                   <table class="table table-fixed table-dark" id ="table_data">
-                                      <thead>
-                                               <th>Name</th>
-                                               <th>Value</th>
-                                               <!-- <th>Options</th> -->
-                                        </thead>
-                                        <tbody>
-                                             {% for i in model.inputs_csv %}
-                                                    <tr>
-                                                       <td>{{i.0}}</td>
-                                                       <td>{{ i.1 }}</td>
-                                                           <!-- <td>
-                                                           <button class="editbtn">Edit</button>
-                                                            <button class="btn_cancel">Cancel</button>
-                                                           <button class="btn_save">Save</button>
-                                                           </td> -->
-                                                   </tr>
-                                              {% endfor %}
-                                            </tbody>
-                                            </table>
-                                         </div>
-                                     </div>
-
-                              </div>
-                          </div>
-                        </div>
-                        <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-                          <!-- <h5>Result </h5>  <strong><h3 id='result' style='color:black;'></h3></strong> -->
-
-
-
-                             <div class="cta-box">
-                                <div class="cta form-group">
-
-
-
-                                       <h3>Output </h3>
-
-
-
-                                     <div class=" span5" data-wow-duration="1.4s">
-                                      <div id="table-scroll">
-                                        <table id="cupFinals" border=1 px class="fixed">
-                                                  <tbody id="matchData"></tbody>
-                                           </table>
-
-
-                                     </div>
-                               </div>
-                                </div>
-                                </div>
-                               </div>
-
-                               <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-                                 <div class="cta-box">
-
-                                <button type="button" class="btn btn-primary" id ="cbtn"> Edit </button>
-                                <button type="button" class="btn btn-primary" id ="dbtn">Save</button>
-                            </div>
-                            </div>
-
-                            <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-                              <div class="cta-box">
-                             <input type ="submit" class="btn btn-success  btn-md" id ="Submit" class="form-control">
-
-                         </div>
-                         </div>
-
-
-
-                        </div>
+                          <p class="text-center">
+                    <a href="" class="btn btn-success btn-outline-rounded green"> start using bootsnipp <span style="margin-left:10px;" class="glyphicon glyphicon-send"></span></a>
+                </p>
+                      </div>
+                      <div class="tab-pane fade" id="doner">
+  <div class="text-center">
+    <i class="img-intro icon-checkmark-circle"></i>
 </div>
+<h3 class="head text-center">thanks for staying tuned! <span style="color:#f48260;">♥</span> Bootstrap</h3>
+<p class="narrow text-center">
+  Lorem ipsum dolor sit amet, his ea mollis fabellas principes. Quo mazim facilis tincidunt ut, utinam saperet facilisi an vim.
+</p>
 </div>
-
-                                       <div class="tab-pane" role="tabpanel" id="step3">
-                                                       <div class="step33">
-
-                                                       <ul class="list-inline pull-right">
-                                                           <li><button type="button" class="btn btn-default prev-step">Previous</button></li>
-                                                           <li><button type="button" class="btn btn-primary next-step">Save and continue</button></li>
-                                                       </ul>
-                                                   </div>
-
-
-                                    </div>
-                                 </div>
-
+<div class="clearfix"></div>
+</div>
 
 </div>
 </div>
 </div>
+</section>
 
 <!--//-->
 
